--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>¿Quieres ser mi San Valentin? by AlexDev</title>
+  <title>¿Quieres ser mi San Valentin?</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
